# 3dclock_screensaver

./: CMakeLists.txt  README.md  readme.md  screensaver_3dclock.cpp  scrn_3dclock.project  scrn_3dclock.workspace
fonts/: font_copyright.txt
graphic/: glxwindow.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: 3dclock.c  3dclock.cpp  3dclock_screensaver.c  CMakeLists.txt  cube3d_clock.c  glxwindow.h
utils/: time_func.h
